--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">https://www.linkedin.com/in/cecilia-battinelli-b65105120/</span></a></li>
 											</ul>
 										</li>
 									</ul>
