--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<a href="generic.html" class="actions">
+										<h3>Lorem ipsum amet</h3>
+								      	</a>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
