--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<h1>Vulnerable mom</h1>
 							<p>Vulnerable mom to a toddler, daily struggling to make all the ends meet. My journey starts in Febraury 2024 when I gave birth to my first kid: I was expecting unicorns and rainbows, but I got post-partum depression. Navigating the newly baked mom life has been the most challenging time of my life: I was asking eveyrone for help, and I now want to return back all the good things I was suggested.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">More about my journey</a></li>
+								<li><a href="aboutme.html" class="button scrolly">More about my journey</a></li>
 							</ul>
 						</div>
 					</section>
