--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>Recommendations</h2>
 							<p>A unordered collection of reccomendations that I have collected until now ranging from parenthood to mental health, including my favorite baby gear stuff.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<span class="fa-solid fa-hand-holding-hand"></span>
 									<a href="generic.html" class="actions">
 										<h3>Post-partum mental health</h3>
 								      	</a>
