Update icon issue index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>A unordered collection of reccomendations that I have collected until now ranging from parenthood to mental health, including my favorite baby gear stuff.</p>
 							<div class="features">
 								<section>
-									<span class="fa-solid fa-hand-holding-hand"></span>
+									<span class="icon solid major fa-hand-holding-hand"></span>
 									<a href="generic.html" class="actions">
 										<h3>Post-partum mental health</h3>
 								      	</a>
