--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 									<p>What helped me getting through my maternity leave, sleep deprivation and the feeling of "being not good enough"</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-person-breastfeeding"></span>
+									<span class="icon solid major fa-lock"></span>
 									<h3>Breastfeeding</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-baby-carrier"></span>
+									<span class="icon solid major fa-baby-carriage"></span>
 									<a href="generic.html" class="actions">
 										<h3>Baby gear</h3>
 								      	</a>
