--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<p>What helped me getting through my maternity leave, sleep deprivation and the feeling of "being not good enough"</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-baby"></span>
 									<h3>Breastfeeding</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
