--- a/aboutme.html
+++ b/aboutme.html
@@ -34,8 +34,10 @@
 						<div class="inner">
 							<h1 class="major">About me</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Since I have memory I have always pictured myself as a mother. I have always known I wanted to be a mom, and in 2023 both my husband and I felt it was finally the right time: we were ready to be parents.</p>
+							<p>The pregnancy was not the smoothest as I had a million of little problems, and the delivery was also not as I expected: at 38+2 I was told my baby was in distress and suffering. I was induced, and the after 12 hours my little one was on my chest.</p>
+							<p>My motherhood journey starts then: February 2024. The first two days were intense because of tiredness, painful breastfeeding and taking care of a tiny human. On the third day, the baby blues hit me and my feeling of "I want to be a mom" turned into "I am not capable of being a mother. I want my life back. Why did we do this?".</p>
+							<p>That was the start of a long journey. I was diagnosed with major post-partum depression 3 weeks after I gave birth - and I struggled with it for over 6.5 months. I started getting better when my daily schedule started to be more predictable.</p>
 						</div>
 					</section>
 
