--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<section>
 									<span class="icon solid major fa-baby"></span>
 									<h3>Breastfeeding</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>A short recap of my breastfeeding journey with a collection of tips and tools.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-baby-carriage"></span>
