--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-baby"></span>
-									<h3>Breastfeeding</h3>
+									<a href="breastfeeding.html" class="actions">
+										<h3>Breastfeeding</h3>
 									<p>A short recap of my breastfeeding journey with a collection of tips and tools.</p>
 								</section>
 								<section>
